  
    - Added the counterpart constraints minPauseLength and maxPauseLength to the SimpleArrangementEngine, which constrain the
      minimum and maximum pause lengths, respectively, between activity segments (counted in chord sections). The constraints
      will be ignored for an ActivityVector if the ActivityVector is never active or only has one activity segment.

    - Fixed bug that prevented proper random seeding when a song name was used on the command-line.


0.1: 2011-05-22

    - Added a better random seed augmentation scheme. Now random seeds from a component are passed on to subcomponents by
      augmenting the value with a hash value of the implementation class of the subcomponent and the position of the subcomponent
      within the parent component. This makes sure that each subcomponent receives a different random seed with very high
      probability.

    - The DrumSequenceEngine now supports using pitch offsets relative to the base pitch. For example, if the base pitch is
      36, using "0" in the pattern uses pitch 36, "1" uses pitch 37, etc. This is suitable for example for loop players, where
      different pitches for different loop fragments are used.

    - Removed the RhythmSequenceEngine, because it was not configurable and not really usable. Use the DrumSequenceEngine instead.

    - Added a new PatternEngine called RandomFragmentPatternEngine. This PatternEngine can be used for example to generate
      drum patterns. It gives you more control over the results than the RandomPatternEngine by building a pattern by concatenating
      provided pattern fragments, but does not support random velocity generation.

    - Added the constraints startBeforeSection and stopAfterSection to the SimpleArrangementEntry, which are the counterparts of
      startAfterSection and stopBeforeSection, respectively.

    - The RandomSequenceEngine and the RandomPatternSequenceEngine are now deprecated (they will be removed in a future